Fix quick post on tablet size.

--- a/scss/partials/_cmail.scss
+++ b/scss/partials/_cmail.scss
@@ -3,7 +3,7 @@ div.cmail-outer {
   width: 100%;
   margin-bottom: 24px;
 
-  @include tablet() {
+  @include mobile() {
     position: relative;
     bottom: unset;
     right: unset;
@@ -67,7 +67,7 @@ div.cmail-outer {
     z-index: #{$navbar_zindex + 116};
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
 
-    @include tablet() {
+    @include mobile() {
       position: relative;
       height: initial;
       min-height: 100vh;
@@ -88,7 +88,7 @@ div.cmail-outer {
       background-color: $grey_num_2;
       position: absolute;
 
-      @include tablet() {
+      @include mobile() {
         margin-left: 0;
         margin-right: 0;
         width: 100%;
@@ -244,7 +244,7 @@ div.cmail-outer {
               cursor: pointer;
             }
 
-            @include tablet() {
+            @include mobile() {
               display: none;
             }
 
@@ -293,7 +293,7 @@ div.cmail-outer {
         overflow-y: auto;
         overflow-x: visible;
 
-        @include tablet() {
+        @include mobile() {
           padding: 16px 16px 24px;
           width: 100%;
         }
@@ -362,7 +362,7 @@ div.cmail-outer {
     height: 100%;
     position: relative;
 
-    @include tablet() {
+    @include mobile() {
       width: 100vw;
       height: 100vh;
       background-color: $grey_num_2;
@@ -372,7 +372,7 @@ div.cmail-outer {
     div.cmail-mobile-header {
       display: none;
 
-      @include tablet() {
+      @include mobile() {
         display: block;
         width: 100vw;
         height: 50px;
@@ -467,7 +467,7 @@ div.cmail-outer {
 
       @include no-user-select();
 
-      @include tablet() {
+      @include mobile() {
         display: block;
         width: 100%;
         min-height: 56px;
@@ -484,7 +484,7 @@ div.cmail-outer {
         width: 208px;
         position: relative;
 
-        @include tablet() {
+        @include mobile() {
           width: 100%;
           min-height: 32px;
           height: auto;
@@ -494,7 +494,7 @@ div.cmail-outer {
         &.must-see-on {
           width: 304px;
 
-          @include tablet() {
+          @include mobile() {
             width: 100%;
 
             div.must-see-tag {
@@ -536,7 +536,7 @@ div.cmail-outer {
             white-space: nowrap;
           }
 
-          @include tablet() {
+          @include mobile() {
             width: calc(100% - 16px - 32px);
             background-image: cdnUrl("/img/ML/select_arrows.svg");
             background-color: $ultra_light_grey;
@@ -556,7 +556,7 @@ div.cmail-outer {
           max-height: 370px;
           overflow: auto;
 
-          @include tablet() {
+          @include mobile() {
             width: calc(100% - 16px - 32px);
           }
         }
@@ -613,7 +613,7 @@ div.cmail-outer {
             }
           }
 
-          @include tablet() {
+          @include mobile() {
             &.on {
               div.must-see-toggle {
                 background-color: rgba($sea_blue, 0.2);
@@ -658,7 +658,7 @@ div.cmail-outer {
           }
         }
 
-        @include tablet() {
+        @include mobile() {
           display: none;
         }
       }
@@ -670,7 +670,7 @@ div.cmail-outer {
       div.fullscreen-bt-container {
         float: left;
 
-        @include tablet() {
+        @include mobile() {
           display: none;
         }
 
@@ -696,7 +696,7 @@ div.cmail-outer {
       div.close-bt-container {
         float: left;
         
-        @include tablet() {
+        @include mobile() {
           display: none;
         }
 
@@ -712,7 +712,7 @@ div.cmail-outer {
 
           @include preload_image(cdnUrl("/img/ML/cmail_fullscreen_close.svg"));
 
-          @include tablet() {
+          @include mobile() {
             margin-left: 0;
             background-size: 14px 14px;
           }
@@ -737,7 +737,7 @@ div.cmail-outer {
         background-color: rgba(white, 0.1);
         float: left;
 
-        @include tablet() {
+        @include mobile() {
           display: none;
         }
       }
@@ -748,7 +748,7 @@ div.cmail-outer {
       top: 0;
       left: -48px;
       
-      @include tablet() {
+      @include mobile() {
         display: none;
       }
 
@@ -781,7 +781,7 @@ div.cmail-outer {
       box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.07);
       background-color: white;
 
-      @include tablet() {
+      @include mobile() {
         background-color: transparent;
         padding: 24px 0;
         border: none;
@@ -797,7 +797,7 @@ div.cmail-outer {
       overflow: visible;
       height: auto;
 
-      @include tablet() {
+      @include mobile() {
         padding: 4px 16px 24px;
         min-height: calc(100vh - 112px);
         max-height: initial;
@@ -808,7 +808,7 @@ div.cmail-outer {
       div.ziggeo-player, div.ziggeo-recorder {
         margin: 0px auto 24px;
 
-        @include tablet() {
+        @include mobile() {
           margin-top: -24px;
           margin-left: -24px;
         }
@@ -816,7 +816,7 @@ div.cmail-outer {
         video {
           max-width: 548px;
 
-          @include tablet() {
+          @include mobile() {
             max-width: 100vw;
           }
         }
@@ -824,7 +824,7 @@ div.cmail-outer {
         div.ziggeo-player-not-processed, div.ziggeo-recorder-not-processed {
           margin: 0px auto;
 
-          @include tablet() {
+          @include mobile() {
             margin-top: -24px;
             margin-left: -24px;
           }
@@ -841,7 +841,7 @@ div.cmail-outer {
         word-wrap: break-word;
         min-height: 28px;
 
-        @include tablet() {
+        @include mobile() {
           @include activity-title();
           min-height: 30px;
         }
@@ -862,7 +862,7 @@ div.cmail-outer {
         position: relative;
         display: none;
 
-        @include tablet() {
+        @include mobile() {
           display: block;
         }
 
@@ -972,7 +972,7 @@ div.cmail-outer {
       div.rich-body-editor-outer-container {
         position: relative;
 
-        @include tablet() {
+        @include mobile() {
           min-height: calc(100vh - 334px);
         }
       }
@@ -1008,7 +1008,7 @@ div.cmail-outer {
             min-height: 76px;
           }
 
-          @include tablet() {
+          @include mobile() {
             min-height: 20vh;
             max-height: initial;
             @include activity-body(18, 24, $deep_navy);
@@ -1043,7 +1043,7 @@ div.cmail-outer {
       width: 100%;
       margin-top: 16px;
 
-      @include tablet() {
+      @include mobile() {
         display: none;
       }
 
@@ -1060,7 +1060,7 @@ div.cmail-outer {
       div.fullscreen-bt-container {
         float: left;
 
-        @include tablet() {
+        @include mobile() {
           display: none;
         }
 
@@ -1148,7 +1148,7 @@ div.cmail-outer {
             cursor: pointer;
           }
 
-          @include tablet() {
+          @include mobile() {
             display: none;
           }
 
@@ -1177,7 +1177,7 @@ div.cmail-outer {
             }
           }
 
-          @include tablet() {
+          @include mobile() {
             display: none;
           }
         }
@@ -1214,7 +1214,7 @@ div.cmail-outer {
             white-space: nowrap;
           }
 
-          @include tablet() {
+          @include mobile() {
             width: calc(100% - 16px - 32px);
             background-image: cdnUrl("/img/ML/select_arrows.svg");
             background-color: $ultra_light_grey;
@@ -1239,7 +1239,7 @@ div.cmail-outer {
             top: unset;
             left: unset;
 
-            @include tablet() {
+            @include mobile() {
               width: calc(100% - 16px - 32px);
             }
           }
